# aspn-generated

./: .gitignore  NOTICE  pyproject.toml
aspn-c/: meson.build
aspn-cpp/: README_PYTHON.md  meson.build
aspn-cpp/src/aspn23/xtensor/: MeasurementAccumulatedDistanceTraveled.cpp  MeasurementAccumulatedDistanceTraveled.hpp  MeasurementAltitude.cpp  MeasurementAltitude.hpp  MeasurementAngularVelocity.cpp  MeasurementAngularVelocity.hpp  MeasurementAngularVelocity1D.cpp  MeasurementAngularVelocity1D.hpp  MeasurementAttitude2D.cpp  MeasurementAttitude2D.hpp  MeasurementAttitude3D.cpp  MeasurementAttitude3D.hpp  MeasurementBarometer.cpp  MeasurementBarometer.hpp  MeasurementDeltaPosition.cpp  MeasurementDeltaPosition.hpp  MeasurementDeltaRange.cpp  MeasurementDeltaRange.hpp  MeasurementDeltaRangeToPoint.cpp  MeasurementDeltaRangeToPoint.hpp  MeasurementDirection2DToPoints.hpp  MeasurementDirection3DToPoints.hpp  MeasurementDirectionOfMotion2D.cpp  MeasurementDirectionOfMotion2D.hpp  MeasurementDirectionOfMotion3D.cpp  MeasurementDirectionOfMotion3D.hpp  MeasurementFrequencyDifference.cpp  MeasurementFrequencyDifference.hpp  MeasurementHeading.cpp  MeasurementHeading.hpp  MeasurementImage.cpp  MeasurementImage.hpp  MeasurementImu.cpp  MeasurementImu.hpp  MeasurementMagneticField.cpp  MeasurementMagneticField.hpp  MeasurementMagneticFieldMagnitude.cpp  MeasurementMagneticFieldMagnitude.hpp  MeasurementPosition.cpp  MeasurementPosition.hpp  (+66 more)
aspn-cpp/src/aspn23/xtensor_py/: MeasurementAccumulatedDistanceTraveled.cpp  MeasurementAccumulatedDistanceTraveled.hpp  MeasurementAltitude.cpp  MeasurementAltitude.hpp  MeasurementAngularVelocity.cpp  MeasurementAngularVelocity.hpp  MeasurementAngularVelocity1D.cpp  MeasurementAngularVelocity1D.hpp  MeasurementAttitude2D.cpp  MeasurementAttitude2D.hpp  MeasurementAttitude3D.cpp  MeasurementAttitude3D.hpp  MeasurementBarometer.cpp  MeasurementBarometer.hpp  MeasurementDeltaPosition.cpp  MeasurementDeltaPosition.hpp  MeasurementDeltaRange.cpp  MeasurementDeltaRange.hpp  MeasurementDeltaRangeToPoint.cpp  MeasurementDeltaRangeToPoint.hpp  MeasurementDirection2DToPoints.hpp  MeasurementDirection3DToPoints.hpp  MeasurementDirectionOfMotion2D.cpp  MeasurementDirectionOfMotion2D.hpp  MeasurementDirectionOfMotion3D.cpp  MeasurementDirectionOfMotion3D.hpp  MeasurementFrequencyDifference.cpp  MeasurementFrequencyDifference.hpp  MeasurementHeading.cpp  MeasurementHeading.hpp  MeasurementImage.cpp  MeasurementImage.hpp  MeasurementImu.cpp  MeasurementImu.hpp  MeasurementMagneticField.cpp  MeasurementMagneticField.hpp  MeasurementMagneticFieldMagnitude.cpp  MeasurementMagneticFieldMagnitude.hpp  MeasurementPosition.cpp  MeasurementPosition.hpp  (+67 more)
aspn-cpp/test/: test_import.py
aspn-json/schemas/: measurement_IMU.json  measurement_TDOA_1Tx_2Rx.json  measurement_TDOA_2Tx_1Rx.json  measurement_accumulated_distance_traveled.json  measurement_altitude.json  measurement_angular_velocity.json  measurement_angular_velocity_1d.json  measurement_attitude_2d.json  measurement_attitude_3d.json  measurement_barometer.json  measurement_delta_position.json  measurement_delta_range.json  measurement_delta_range_to_point.json  measurement_direction_2d_to_points.json  measurement_direction_3d_to_points.json  measurement_direction_of_motion_2d.json  measurement_direction_of_motion_3d.json  measurement_frequency_difference.json  measurement_heading.json  measurement_image.json  measurement_magnetic_field.json  measurement_magnetic_field_magnitude.json  measurement_position.json  measurement_position_attitude.json  measurement_position_velocity_attitude.json  measurement_range_rate_to_point.json  measurement_range_to_point.json  measurement_satnav.json  measurement_satnav_subframe.json  measurement_satnav_with_sv_data.json  measurement_specific_force_1d.json  measurement_speed.json  measurement_temperature.json  measurement_time.json  measurement_time_difference.json  measurement_time_frequency_difference.json  measurement_velocity.json  metadata_BeiDou_ephemeris.json  metadata_GLONASS_ephemeris.json  metadata_GPS_Cnav_ephemeris.json  (+25 more)
aspn-lcm/: measurement_image.lcm  measurement_satnav_subframe.lcm  type_image_feature.lcm
aspn-py/: README.md  pyproject.toml
aspn23_lcm_conversions/: README.md  pyproject.toml
aspn23_lcm_conversions/aspn23_lcm_conversions/: __init__.py  lcm_translations.py
dds/cpp/: CMakeLists.txt  meson.build
lcm/c/include/: aspn23_lcm_measurement_image.h  aspn23_lcm_measurement_satnav_subframe.h  aspn23_lcm_type_image_feature.h
lcm/c/src/: aspn23_lcm_measurement_image.c  aspn23_lcm_measurement_satnav_subframe.c  aspn23_lcm_type_image_feature.c
lcm/cpp/aspn23_lcm/: measurement_image.hpp  measurement_satnav_subframe.hpp  type_image_feature.hpp
lcm/java/aspn23_lcm/: measurement_image.java  measurement_satnav_subframe.java  type_image_feature.java
lcm/python/: README.md  fingerprints.md  pyproject.toml
lcm/python/aspn23_lcm/: __init__.py  measurement_image.py  measurement_satnav_subframe.py  type_image_feature.py
