[build-system]
requires = ['meson==1.8.4', 'meson-python', 'numpy>=1.21', 'pybind11-stubgen>=2.5.5']
build-backend = 'mesonpy'

[tool.meson-python.args]
setup = ['-Daspn-cpp-eigen=disabled',
         '-Daspn-cpp-stl=disabled',
         '-Daspn-cpp-xtensor=disabled',
         '-Daspn-cpp-xtensor-py=enabled',
         '-Ddds-generated=disabled',
         '-Dlcm-generated=disabled',
         '-Daspn-c-main-library=false']
install = ['--tags=runtime,python-runtime,devel', '--skip-subprojects']

[project]
dependencies = ['numpy']
name = 'aspn23_xtensor'
version = '0.1.0'
description = 'ASPN-C++ (xtensor) Python Bindings'
license = 'Apache-2.0'
license-files = ['LICENSE']
readme = 'aspn-cpp/README_PYTHON.md'

[tool.pytest.ini_options]
norecursedirs = ['subprojects']

[[tool.cibuildwheel.overrides]]
select = "*armv7*"
before-all = """
  apt-get update &&
  apt-get install -y libopenblas-dev gcc-10 g++-10 &&
  update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 60 &&
  update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 60
"""
