
# This code is generated via firehose.
# DO NOT hand edit code. Make any changes required using the firehose repo instead.

aspn_sources = [
    'src/aspn23/TypeDirection2DToPoint.c',
    'src/aspn23/TypeDirection3DToPoint.c',
    'src/aspn23/TypeHeader.c',
    'src/aspn23/TypeImageFeature.c',
    'src/aspn23/TypeIntegrity.c',
    'src/aspn23/TypeKeplerOrbit.c',
    'src/aspn23/TypeMetadataheader.c',
    'src/aspn23/TypeMounting.c',
    'src/aspn23/TypeRemotePoint.c',
    'src/aspn23/TypeSatnavClock.c',
    'src/aspn23/TypeSatnavObs.c',
    'src/aspn23/TypeSatnavSatelliteSystem.c',
    'src/aspn23/TypeSatnavSignalDescriptor.c',
    'src/aspn23/TypeSatnavSvData.c',
    'src/aspn23/TypeSatnavTime.c',
    'src/aspn23/TypeTimestamp.c',
    'src/aspn23/MetadataBeidouEphemeris.c',
    'src/aspn23/MetadataGlonassEphemeris.c',
    'src/aspn23/MetadataGpsCnavEphemeris.c',
    'src/aspn23/MetadataGpsLnavEphemeris.c',
    'src/aspn23/MetadataGpsMnavEphemeris.c',
    'src/aspn23/MetadataGpsIonoUtcParameters.c',
    'src/aspn23/MetadataGalileoEphemeris.c',
    'src/aspn23/MetadataImu.c',
    'src/aspn23/MetadataGeneric.c',
    'src/aspn23/MetadataImageFeatures.c',
    'src/aspn23/MetadataMagneticField.c',
    'src/aspn23/MetadataSatnavObs.c',
    'src/aspn23/MeasurementImu.c',
    'src/aspn23/MeasurementTdoa1Tx2Rx.c',
    'src/aspn23/MeasurementTdoa2Tx1Rx.c',
    'src/aspn23/MeasurementAccumulatedDistanceTraveled.c',
    'src/aspn23/MeasurementAltitude.c',
    'src/aspn23/MeasurementAngularVelocity.c',
    'src/aspn23/MeasurementAngularVelocity1D.c',
    'src/aspn23/MeasurementAttitude2D.c',
    'src/aspn23/MeasurementAttitude3D.c',
    'src/aspn23/MeasurementBarometer.c',
    'src/aspn23/MeasurementDeltaPosition.c',
    'src/aspn23/MeasurementDeltaRange.c',
    'src/aspn23/MeasurementDeltaRangeToPoint.c',
    'src/aspn23/MeasurementDirection2DToPoints.c',
    'src/aspn23/MeasurementDirection3DToPoints.c',
    'src/aspn23/MeasurementDirectionOfMotion2D.c',
    'src/aspn23/MeasurementDirectionOfMotion3D.c',
    'src/aspn23/MeasurementFrequencyDifference.c',
    'src/aspn23/MeasurementHeading.c',
    'src/aspn23/MeasurementImage.c',
    'src/aspn23/MeasurementMagneticField.c',
    'src/aspn23/MeasurementMagneticFieldMagnitude.c',
    'src/aspn23/MeasurementPosition.c',
    'src/aspn23/MeasurementPositionAttitude.c',
    'src/aspn23/MeasurementPositionVelocityAttitude.c',
    'src/aspn23/MeasurementRangeRateToPoint.c',
    'src/aspn23/MeasurementRangeToPoint.c',
    'src/aspn23/MeasurementSatnav.c',
    'src/aspn23/MeasurementSatnavSubframe.c',
    'src/aspn23/MeasurementSatnavWithSvData.c',
    'src/aspn23/MeasurementSpecificForce1D.c',
    'src/aspn23/MeasurementSpeed.c',
    'src/aspn23/MeasurementTemperature.c',
    'src/aspn23/MeasurementTime.c',
    'src/aspn23/MeasurementTimeDifference.c',
    'src/aspn23/MeasurementTimeFrequencyDifference.c',
    'src/aspn23/MeasurementVelocity.c',
    'src/aspn23/utils.c',
    'src/aspn23/types.c',
]

aspn_headers = [
    'src/aspn23/aspn.h',
    'src/aspn23/common.h',
    'src/aspn23/messages_and_types.h',
    'src/aspn23/TypeDirection2DToPoint.h',
    'src/aspn23/TypeDirection3DToPoint.h',
    'src/aspn23/TypeHeader.h',
    'src/aspn23/TypeImageFeature.h',
    'src/aspn23/TypeIntegrity.h',
    'src/aspn23/TypeKeplerOrbit.h',
    'src/aspn23/TypeMetadataheader.h',
    'src/aspn23/TypeMounting.h',
    'src/aspn23/TypeRemotePoint.h',
    'src/aspn23/TypeSatnavClock.h',
    'src/aspn23/TypeSatnavObs.h',
    'src/aspn23/TypeSatnavSatelliteSystem.h',
    'src/aspn23/TypeSatnavSignalDescriptor.h',
    'src/aspn23/TypeSatnavSvData.h',
    'src/aspn23/TypeSatnavTime.h',
    'src/aspn23/TypeTimestamp.h',
    'src/aspn23/MetadataBeidouEphemeris.h',
    'src/aspn23/MetadataGlonassEphemeris.h',
    'src/aspn23/MetadataGpsCnavEphemeris.h',
    'src/aspn23/MetadataGpsLnavEphemeris.h',
    'src/aspn23/MetadataGpsMnavEphemeris.h',
    'src/aspn23/MetadataGpsIonoUtcParameters.h',
    'src/aspn23/MetadataGalileoEphemeris.h',
    'src/aspn23/MetadataImu.h',
    'src/aspn23/MetadataGeneric.h',
    'src/aspn23/MetadataImageFeatures.h',
    'src/aspn23/MetadataMagneticField.h',
    'src/aspn23/MetadataSatnavObs.h',
    'src/aspn23/MeasurementImu.h',
    'src/aspn23/MeasurementTdoa1Tx2Rx.h',
    'src/aspn23/MeasurementTdoa2Tx1Rx.h',
    'src/aspn23/MeasurementAccumulatedDistanceTraveled.h',
    'src/aspn23/MeasurementAltitude.h',
    'src/aspn23/MeasurementAngularVelocity.h',
    'src/aspn23/MeasurementAngularVelocity1D.h',
    'src/aspn23/MeasurementAttitude2D.h',
    'src/aspn23/MeasurementAttitude3D.h',
    'src/aspn23/MeasurementBarometer.h',
    'src/aspn23/MeasurementDeltaPosition.h',
    'src/aspn23/MeasurementDeltaRange.h',
    'src/aspn23/MeasurementDeltaRangeToPoint.h',
    'src/aspn23/MeasurementDirection2DToPoints.h',
    'src/aspn23/MeasurementDirection3DToPoints.h',
    'src/aspn23/MeasurementDirectionOfMotion2D.h',
    'src/aspn23/MeasurementDirectionOfMotion3D.h',
    'src/aspn23/MeasurementFrequencyDifference.h',
    'src/aspn23/MeasurementHeading.h',
    'src/aspn23/MeasurementImage.h',
    'src/aspn23/MeasurementMagneticField.h',
    'src/aspn23/MeasurementMagneticFieldMagnitude.h',
    'src/aspn23/MeasurementPosition.h',
    'src/aspn23/MeasurementPositionAttitude.h',
    'src/aspn23/MeasurementPositionVelocityAttitude.h',
    'src/aspn23/MeasurementRangeRateToPoint.h',
    'src/aspn23/MeasurementRangeToPoint.h',
    'src/aspn23/MeasurementSatnav.h',
    'src/aspn23/MeasurementSatnavSubframe.h',
    'src/aspn23/MeasurementSatnavWithSvData.h',
    'src/aspn23/MeasurementSpecificForce1D.h',
    'src/aspn23/MeasurementSpeed.h',
    'src/aspn23/MeasurementTemperature.h',
    'src/aspn23/MeasurementTime.h',
    'src/aspn23/MeasurementTimeDifference.h',
    'src/aspn23/MeasurementTimeFrequencyDifference.h',
    'src/aspn23/MeasurementVelocity.h',
    'src/aspn23/utils.h',
    'src/aspn23/types.h',
]

install_headers(aspn_headers, subdir: 'aspn23')

aspn_c_inc_dir = include_directories('src')

if not get_option('aspn-cpp-xtensor-py').disabled()
    # Used by python bindings module in ASPN-C++.
    aspn_c_static_lib_no_asan = static_library('aspn_no_asan',
                            sources: aspn_sources,
                            override_options: ['b_coverage=false',
                                            'b_sanitize=none'],
                            include_directories: aspn_c_inc_dir)

aspn_c_no_asan_dep = declare_dependency(link_whole: aspn_c_static_lib_no_asan,
                        include_directories: aspn_c_inc_dir)

endif

if get_option('aspn-c-main-library')

    aspn_c_libs = both_libraries('aspn',
                            sources: aspn_sources,
                            include_directories: aspn_c_inc_dir,
                            soversion: meson.project_version(),
                            install: true)

    aspn_c_dep = declare_dependency(link_with: aspn_c_libs.get_shared_lib(),
                            include_directories: aspn_c_inc_dir)

    foreach source : aspn_sources
        header = source.replace('.c', '.h')
        install_headers(header, install_dir: get_option('includedir') + '/aspn23')
    endforeach
    install_headers('src/aspn23/aspn.h', install_dir: get_option('includedir') + '/aspn23')
    install_headers('src/aspn23/common.h', install_dir: get_option('includedir') + '/aspn23')
    install_headers('src/aspn23/messages_and_types.h', install_dir: get_option('includedir') + '/aspn23')

    aspn_runtime_types = [
        'ASPN_METADATA_BEIDOU_EPHEMERIS',
    'ASPN_METADATA_GLONASS_EPHEMERIS',
    'ASPN_METADATA_GPS_CNAV_EPHEMERIS',
    'ASPN_METADATA_GPS_LNAV_EPHEMERIS',
    'ASPN_METADATA_GPS_MNAV_EPHEMERIS',
    'ASPN_METADATA_GPS_IONO_UTC_PARAMETERS',
    'ASPN_METADATA_GALILEO_EPHEMERIS',
    'ASPN_METADATA_IMU',
    'ASPN_METADATA_GENERIC',
    'ASPN_METADATA_IMAGE_FEATURES',
    'ASPN_METADATA_MAGNETIC_FIELD',
    'ASPN_METADATA_SATNAV_OBS',
    'ASPN_MEASUREMENT_IMU',
    'ASPN_MEASUREMENT_TDOA_1TX_2RX',
    'ASPN_MEASUREMENT_TDOA_2TX_1RX',
    'ASPN_MEASUREMENT_ACCUMULATED_DISTANCE_TRAVELED',
    'ASPN_MEASUREMENT_ALTITUDE',
    'ASPN_MEASUREMENT_ANGULAR_VELOCITY',
    'ASPN_MEASUREMENT_ANGULAR_VELOCITY_1D',
    'ASPN_MEASUREMENT_ATTITUDE_2D',
    'ASPN_MEASUREMENT_ATTITUDE_3D',
    'ASPN_MEASUREMENT_BAROMETER',
    'ASPN_MEASUREMENT_DELTA_POSITION',
    'ASPN_MEASUREMENT_DELTA_RANGE',
    'ASPN_MEASUREMENT_DELTA_RANGE_TO_POINT',
    'ASPN_MEASUREMENT_DIRECTION_2D_TO_POINTS',
    'ASPN_MEASUREMENT_DIRECTION_3D_TO_POINTS',
    'ASPN_MEASUREMENT_DIRECTION_OF_MOTION_2D',
    'ASPN_MEASUREMENT_DIRECTION_OF_MOTION_3D',
    'ASPN_MEASUREMENT_FREQUENCY_DIFFERENCE',
    'ASPN_MEASUREMENT_HEADING',
    'ASPN_MEASUREMENT_IMAGE',
    'ASPN_MEASUREMENT_MAGNETIC_FIELD',
    'ASPN_MEASUREMENT_MAGNETIC_FIELD_MAGNITUDE',
    'ASPN_MEASUREMENT_POSITION',
    'ASPN_MEASUREMENT_POSITION_ATTITUDE',
    'ASPN_MEASUREMENT_POSITION_VELOCITY_ATTITUDE',
    'ASPN_MEASUREMENT_RANGE_RATE_TO_POINT',
    'ASPN_MEASUREMENT_RANGE_TO_POINT',
    'ASPN_MEASUREMENT_SATNAV',
    'ASPN_MEASUREMENT_SATNAV_SUBFRAME',
    'ASPN_MEASUREMENT_SATNAV_WITH_SV_DATA',
    'ASPN_MEASUREMENT_SPECIFIC_FORCE_1D',
    'ASPN_MEASUREMENT_SPEED',
    'ASPN_MEASUREMENT_TEMPERATURE',
    'ASPN_MEASUREMENT_TIME',
    'ASPN_MEASUREMENT_TIME_DIFFERENCE',
    'ASPN_MEASUREMENT_TIME_FREQUENCY_DIFFERENCE',
    'ASPN_MEASUREMENT_VELOCITY'
    ]

    pkg = import('pkgconfig')
    pkg.generate(aspn_c_libs,
        name: 'aspn23',
        description: 'ASPN c',
        unescaped_variables: 'aspn_runtime_types=' + ' '.join(aspn_runtime_types),
        version: meson.project_version())

    meson.override_dependency('aspn23', aspn_c_dep)

else # get_option('aspn-c-main-library')

    aspn_c_dep = disabler()

endif

